--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"mongoose-unique-validator": "^3.1.0"
 	},
 	"devDependencies": {
-		"cors": "^2.8.5"
+		"cors": "^2.8.5",
+		"nodemon": "^2.0.19"
 	}
 }
