--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongodb": "^4.8.0",
 		"mongoose": "^6.4.0",
-		"mongoose-unique-validator": "^3.1.0"
+		"mongoose-unique-validator": "^3.1.0",
+		"nodemon": "^2.0.19"
 	},
 	"devDependencies": {
-		"cors": "^2.8.5",
-		"nodemon": "^2.0.19"
+		"cors": "^2.8.5"
 	}
 }
