--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"jsonwebtoken": "^8.5.1",
@@ -21,8 +22,5 @@
 		"mongoose": "^6.4.0",
 		"mongoose-unique-validator": "^3.1.0",
 		"nodemon": "^2.0.19"
-	},
-	"devDependencies": {
-		"cors": "^2.8.5"
 	}
 }
